<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_register"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android1:background="@drawable/common_background"
    tools:context=".LoginActivity" >

    <RelativeLayout
        android1:id="@+id/rl_regsiter_header"
        android1:layout_width="fill_parent"
        android1:layout_height="95px"
        android1:layout_alignParentLeft="true"
        android1:layout_alignParentTop="true"
        android1:background="#00a086" >

        <ImageButton
            android1:id="@+id/imgbtn_register_back"
            android1:layout_width="55px"
            android1:layout_height="55px"
            android1:layout_centerVertical="true"
            android1:layout_marginLeft="20px"
            android1:background="@android:color/transparent"
            android1:scaleType="fitCenter"
            android1:src="@drawable/btn_back" />

        <TextView
            android1:id="@+id/lbl_register_title"
            android1:layout_width="400px"
            android1:layout_height="match_parent"
            android1:layout_centerHorizontal="true"
            android1:background="@android:color/transparent"
            android1:gravity="center"
            android1:text="@string/activity_register_title"
            android1:textColor="@android:color/white"
            android1:textSize="@dimen/title_fnt_size" />
    </RelativeLayout>

    <EditText
        android1:id="@+id/edit_register_userid"
        android1:layout_width="590px"
        android1:layout_height="90px"
        android1:layout_below="@id/rl_regsiter_header"
        android1:layout_centerHorizontal="true"
        android1:layout_marginTop="68px"
        android1:background="@drawable/common_edt_back"
        android1:ems="10"
        android1:hint="@string/activity_register_hint_userid"
        android1:inputType="textEmailAddress"
        android1:paddingLeft="30px"
        android1:textColor="@color/color_black"
        android1:textColorHint="@color/common_placeholder_text"
        android1:textSize="@dimen/editbox_fnt_size" >

        <requestFocus />
    </EditText>

    <EditText
        android1:id="@+id/edit_register_password"
        android1:layout_width="590px"
        android1:layout_height="90px"
        android1:layout_below="@id/edit_register_userid"
        android1:layout_centerHorizontal="true"
        android1:layout_marginTop="30px"
        android1:background="@drawable/common_edt_back"
        android1:ems="10"
        android1:hint="@string/activity_register_hint_password"
        android1:inputType="textPassword"
        android1:paddingLeft="30px"
        android1:textColor="@color/color_black"
        android1:textColorHint="@color/common_placeholder_text"
        android1:textSize="@dimen/editbox_fnt_size" />

    <EditText
        android1:id="@+id/edit_register_rpassword"
        android1:layout_width="590px"
        android1:layout_height="90px"
        android1:layout_below="@id/edit_register_password"
        android1:layout_centerHorizontal="true"
        android1:layout_marginTop="30px"
        android1:background="@drawable/common_edt_back"
        android1:ems="10"
        android1:hint="@string/activity_register_hint_rpassword"
        android1:inputType="textPassword"
        android1:paddingLeft="30px"
        android1:textColor="@color/color_black"
        android1:textColorHint="@color/common_placeholder_text"
        android1:textSize="@dimen/editbox_fnt_size" />

    <Button
        android1:id="@+id/btn_register_register"
        android1:layout_width="527px"
        android1:layout_height="90px"
        android1:layout_alignParentBottom="true"
        android1:layout_centerHorizontal="true"
        android1:layout_marginBottom="70px"
        android1:background="@drawable/btn_green"
        android1:text="@string/activity_register_btn_register"
        android1:textColor="@color/color_white"
        android1:textSize="@dimen/button_label_fnt_size" />

</RelativeLayout>