<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_changepassword"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android1:background="@drawable/common_background"
    tools:context=".LoginActivity" >

    <RelativeLayout
        android1:id="@+id/rl_changepassword_header"
        android1:layout_width="fill_parent"
        android1:layout_height="95px"
        android1:layout_alignParentLeft="true"
        android1:layout_alignParentTop="true"
        android1:background="#00a086" >

        <ImageButton
            android1:id="@+id/imgbtn_changepassword_back"
            android1:layout_width="55px"
            android1:layout_height="55px"
            android1:layout_centerVertical="true"
            android1:layout_marginLeft="20px"
            android1:background="@android:color/transparent"
            android1:scaleType="fitCenter"
            android1:src="@drawable/btn_back" />

        <TextView
            android1:id="@+id/lbl_changepassword_title"
            android1:layout_width="400px"
            android1:layout_height="match_parent"
            android1:layout_centerHorizontal="true"
            android1:background="@android:color/transparent"
            android1:gravity="center"
            android1:text="@string/activity_changepassword_title"
            android1:textColor="@android:color/white"
            android1:textSize="@dimen/title_fnt_size" />

        <Button
            android1:id="@+id/btn_changepassword_save"
            android1:layout_width="112px"
            android1:layout_height="64px"
            android1:layout_alignParentRight="true"
            android1:layout_centerVertical="true"
            android1:layout_marginRight="24px"
            android1:background="@drawable/btn_transparent"
            android1:text="@string/common_save"
            android1:textColor="@color/color_white"
            android1:textSize="@dimen/normal_fnt_size" />

    </RelativeLayout>

    <EditText
        android1:id="@+id/edit_changepassword_old"
        android1:layout_width="590px"
        android1:layout_height="90px"
        android1:layout_below="@id/rl_changepassword_header"
        android1:layout_centerHorizontal="true"
        android1:layout_marginTop="68px"
        android1:background="@drawable/common_edt_back"
        android1:ems="10"
        android1:hint="@string/activity_changepassword_old"
        android1:inputType="textPassword"
        android1:paddingLeft="30px"
        android1:textColor="@color/color_black"
        android1:textColorHint="@color/common_placeholder_text"
        android1:textSize="@dimen/editbox_fnt_size" >

        <requestFocus />
    </EditText>

    <EditText
        android1:id="@+id/edit_changepassword_new"
        android1:layout_width="590px"
        android1:layout_height="90px"
        android1:layout_below="@id/edit_changepassword_old"
        android1:layout_centerHorizontal="true"
        android1:layout_marginTop="30px"
        android1:background="@drawable/common_edt_back"
        android1:ems="10"
        android1:hint="@string/activity_changepassword_new"
        android1:inputType="textPassword"
        android1:paddingLeft="30px"
        android1:textColor="@color/color_black"
        android1:textColorHint="@color/common_placeholder_text"
        android1:textSize="@dimen/editbox_fnt_size" />

    <EditText
        android1:id="@+id/edit_changepassword_retype"
        android1:layout_width="590px"
        android1:layout_height="90px"
        android1:layout_below="@id/edit_changepassword_new"
        android1:layout_centerHorizontal="true"
        android1:layout_marginTop="30px"
        android1:background="@drawable/common_edt_back"
        android1:ems="10"
        android1:hint="@string/activity_changepassword_retype"
        android1:inputType="textPassword"
        android1:paddingLeft="30px"
        android1:textColor="@color/color_black"
        android1:textColorHint="@color/common_placeholder_text"
        android1:textSize="@dimen/editbox_fnt_size" />

</RelativeLayout>