<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_targetweight"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android1:background="@drawable/common_background"
    tools:context=".LoginActivity" >

    <RelativeLayout
        android1:id="@+id/rl_targetweight_header"
        android1:layout_width="fill_parent"
        android1:layout_height="95px"
        android1:layout_alignParentLeft="true"
        android1:layout_alignParentTop="true"
        android1:background="#00a086" >

        <ImageButton
            android1:id="@+id/imgbtn_targetweight_back"
            android1:layout_width="55px"
            android1:layout_height="55px"
            android1:layout_centerVertical="true"
            android1:layout_marginLeft="20px"
            android1:background="@android:color/transparent"
            android1:scaleType="fitCenter"
            android1:src="@drawable/btn_back" />

        <TextView
            android1:id="@+id/lbl_targetweight_title"
            android1:layout_width="400px"
            android1:layout_height="match_parent"
            android1:layout_centerHorizontal="true"
            android1:background="@android:color/transparent"
            android1:gravity="center"
            android1:text="@string/activity_targetweight_title"
            android1:textColor="@android:color/white"
            android1:textSize="@dimen/title_fnt_size" />

        <Button
            android1:id="@+id/btn_targetweight_save"
            android1:layout_width="112px"
            android1:layout_height="64px"
            android1:layout_alignParentRight="true"
            android1:layout_centerVertical="true"
            android1:layout_marginRight="24px"
            android1:background="@drawable/btn_transparent"
            android1:text="@string/common_save"
            android1:textColor="@color/color_white"
            android1:textSize="@dimen/normal_fnt_size" />

    </RelativeLayout>

    <TextView
        android1:id="@+id/lbl_targetweight_note1"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_below="@id/rl_targetweight_header"
        android1:layout_centerHorizontal="true"
        android1:layout_marginTop="34px"
        android1:text="@string/activity_targetweight_note1"
        android1:textColor="@color/common_note_text"
        android1:textSize="36px" />

    <TextView
        android1:id="@+id/lbl_targetweight_note2"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_below="@id/lbl_targetweight_note1"
        android1:layout_centerHorizontal="true"
        android1:layout_marginTop="20px"
        android1:text="@string/activity_targetweight_note2"
        android1:textColor="@color/common_note_text"
        android1:textSize="36px" />

    <RelativeLayout
        android1:id="@+id/rl_targetweight_picker"
        android1:layout_width="526px"
        android1:layout_height="506px"
        android1:layout_below="@id/lbl_targetweight_note2"
        android1:layout_centerHorizontal="true"
        android1:layout_marginTop="60px"
        android1:background="@drawable/common_picker_back" >

        <RelativeLayout
            android1:layout_width="fill_parent"
            android1:layout_height="370px"
            android1:layout_centerVertical="true"
            android1:layout_marginLeft="16px"
            android1:layout_marginRight="16px" >

            <com.damy.Utils.WheelPicker.WheelView
                android1:id="@+id/wheel_targetweight_int"
                android1:layout_width="250px"
                android1:layout_height="fill_parent"
                android1:layout_weight="60" />

            <com.damy.Utils.WheelPicker.WheelView
                android1:id="@+id/wheel_targetweight_float"
                android1:layout_width="fill_parent"
                android1:layout_height="fill_parent"
                android1:layout_toRightOf="@id/wheel_targetweight_int"
                android1:layout_weight="60" />
        </RelativeLayout>

    </RelativeLayout>

    <Button
        android1:id="@+id/btn_targetweight_next"
        android1:layout_width="527px"
        android1:layout_height="90px"
        android1:layout_alignParentBottom="true"
        android1:layout_centerHorizontal="true"
        android1:layout_marginBottom="70px"
        android1:background="@drawable/btn_green"
        android1:text="@string/activity_targetweight_btn_next"
        android1:textColor="@color/color_white"
        android1:textSize="@dimen/button_label_fnt_size" />

</RelativeLayout>